# topic_model_project

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
notebooks/: topic_modeling_with_bertopic.ipynb
notebooks/data/: pubmed_data_200.parquet
scripts/: __init__.py  ollama_helper.py  pubmed_helpers.py  text_cleaning.py
