[project]
name = "topic-model-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.3.0",
    "annotated-types==0.7.0",
    "asttokens==3.0.0",
    "attrs==24.3.0",
    "beautifulsoup4==4.12.3",
    "bertopic==0.16.4",
    "bioc==2.1",
    "blis==1.2.0",
    "boto3==1.36.2",
    "botocore==1.36.2",
    "catalogue==2.0.10",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudpathlib==0.20.0",
    "colorama==0.4.6",
    "comm==0.2.2",
    "confection==0.1.5",
    "conllu==4.5.3",
    "contourpy==1.3.1",
    "cramjam==2.9.1",
    "cycler==0.12.1",
    "cymem==2.0.11",
    "debugpy==1.8.12",
    "decorator==5.1.1",
    "deprecated==1.2.15",
    "docopt==0.6.2",
    "en-core-web-sm",
    "executing==2.1.0",
    "fastjsonschema==2.21.1",
    "fastparquet==2024.11.0",
    "filelock==3.16.1",
    "fonttools==4.55.3",
    "fsspec==2024.12.0",
    "ftfy==6.3.1",
    "gdown==5.2.0",
    "hdbscan==0.8.40",
    "huggingface-hub==0.27.1",
    "idna==3.10",
    "intervaltree==3.1.0",
    "ipykernel==6.29.5",
    "ipython==8.31.0",
    "ipywidgets==8.1.5",
    "jedi==0.19.2",
    "jinja2==3.1.5",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "jsonlines==4.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyterlab-widgets==3.0.13",
    "kiwisolver==1.4.8",
    "langcodes==3.5.0",
    "langdetect==1.0.9",
    "language-data==1.3.0",
    "llvmlite==0.43.0",
    "lxml==5.3.0",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "more-itertools==10.6.0",
    "mpld3==0.5.10",
    "mpmath==1.3.0",
    "murmurhash==1.0.12",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numba==0.60.0",
    "numpy==2.0.2",
    "openai==1.59.9",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pillow==11.1.0",
    "pip==24.3.1",
    "platformdirs==4.3.6",
    "plotly==5.24.1",
    "pptree==3.1",
    "preshed==3.0.9",
    "prompt-toolkit==3.0.48",
    "protobuf==5.29.3",
    "psutil==6.1.1",
    "pure-eval==0.2.3",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "pynndescent==0.5.13",
    "pyparsing==3.2.1",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytorch-revgrad==0.2.0",
    "pytz==2024.2",
    "pywin32==308",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "referencing==0.36.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "s3transfer==0.11.1",
    "safetensors==0.5.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "segtok==1.5.11",
    "sentence-transformers==3.3.1",
    "sentencepiece==0.2.0",
    "setuptools==75.8.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart-open==7.1.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "spacy==3.8.4",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "sqlitedict==2.1.0",
    "srsly==2.5.1",
    "stack-data==0.6.3",
    "sympy==1.13.1",
    "tabulate==0.9.0",
    "tenacity==9.0.0",
    "thinc==8.3.4",
    "threadpoolctl==3.5.0",
    "tokenizers==0.21.0",
    "torch==2.5.1",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.48.0",
    "typer==0.15.1",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "umap-learn==0.5.7",
    "urllib3==2.3.0",
    "wasabi==1.1.3",
    "wcwidth==0.2.13",
    "weasel==0.4.1",
    "widgetsnbextension==4.0.13",
    "wikipedia-api==0.8.1",
    "wrapt==1.17.2",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
